--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-    Before
     <br>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
     <%- body %>
     <br>
-    After
 </body>
 </html>
